fix skill list overflow on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -849,6 +849,10 @@ footer {
         font-size: 22pt;
     }
 
+    .resume-main .skills-list {
+        padding-right: 35px;
+    }
+
 
     /* CONTACT PAGE STYLING */
 
